fix: html 및 body에 중복 적용되었던 overflow와 height 제거하여 이중 스크롤(Double Scroll) 덜컥거림 현상 수정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,11 +21,11 @@
 
 html {
     scrollbar-gutter: stable;
+    overflow-y: scroll;
 }
 
 html, body {
-    height: 100%;
-    overflow-y: scroll;
+    min-height: 100%;
 }
 
 body {
